Saving Hit Points Promise

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -105,7 +105,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="strength score" title="strength score">
-          <input data-i18n-placeholder="10" name="attr_strength_score" placeholder="10" title="@{strength_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_strength_score" placeholder="10" title="@{strength_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_strength" title="@{strength}"></span>
         <div class="vert-line"></div>
@@ -119,7 +119,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="constitution score" title="constitution score">
-          <input data-i18n-placeholder="10" name="attr_constitution_score" placeholder="10" title="@{constitution_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_constitution_score" placeholder="10" title="@{constitution_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_constitution" title="@{constitution}"></span>
         <div class="vert-line"></div>
@@ -133,7 +133,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="dexterity score" title="dexterity score">
-          <input data-i18n-placeholder="10" name="attr_dexterity_score" placeholder="10" title="@{dexterity_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_dexterity_score" placeholder="10" title="@{dexterity_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_dexterity" title="@{dexterity}"></span>
         <div class="vert-line"></div>
@@ -147,7 +147,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="intelligence score" title="intelligence score">
-          <input data-i18n-placeholder="10" name="attr_intelligence_score" placeholder="10" title="@{intelligence_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_intelligence_score" placeholder="10" title="@{intelligence_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_intelligence" title="@{intelligence}"></span>
         <div class="vert-line"></div>
@@ -161,7 +161,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="power score" title="power score">
-          <input data-i18n-placeholder="10" name="attr_power_score" placeholder="10" title="@{power_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_power_score" placeholder="10" title="@{power_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_power" title="@{power}"></span>
         <div class="vert-line"></div>
@@ -175,7 +175,7 @@
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="charisma score" title="charisma score">
-          <input data-i18n-placeholder="10" name="attr_charisma_score" placeholder="10" title="@{charisma_score}" type="number"/>
+          <input data-i18n-placeholder="10" min="0" name="attr_charisma_score" placeholder="10" title="@{charisma_score}" type="number" value="10"/>
         </label>
         <div class="vert-line"></div><span class="center" name="attr_charisma" title="@{charisma}"></span>
         <div class="vert-line"></div>
@@ -970,50 +970,64 @@
 <!--include src/pug/rolltemplate.pug-->
 <!--SHEETWORKERS-->
 <!-- =============================-->
-<script type="text/worker">
-	// === SHARED FUNCTIONS
-	const setAttributes = (update, silent) => { 
-		(silent === true) ? setAttrs(update, {silent:true}) : setAttrs(update); 
-	};
-
-	// === ATTRIBUTE ARRAYS
+<script type="text/worker">	// === ATTRIBUTE ARRAYS
 		const arrays = {
 			stats: ['strength', 'constitution', 'dexterity', 'intelligence', 'power', 'charisma'],
-			hit_points: ['strength', 'constitution'],
-			sanity_points: ['power'],
-			breaking_point: ['sanity', 'power'],
-			willpower_points: ['power'],
+			hit_points: ['strength_score', 'constitution_score'],
+			sanity_points: ['power_score'],
+			breaking_point: ['sanity_score', 'power_score'],
+			willpower_points: ['power_score'],
 			repeating_settings: [''],
 			sheets: ['settings'],
 			toggles: ['sheet']
 		};
 
+	// === SHARED FUNCTIONS
+	const setAttributes = (update, silent) => { 
+		(silent === true) ? setAttrs(update, {silent:true}) : setAttrs(update); 
+	};
+
+	// === GET ATTRIBUTES
+	const getAttributes = (array) => {
+		return new Promise((resolve, reject)  => {
+			try {
+				getAttrs(array, (values) => {
+					resolve(values);
+				});
+			} catch (error) {
+				reject(`ERROR: ${error}`);
+			}
+		});
+	};
 
 	// === STAT SCORES
 	arrays['stats'].forEach(attr => {
 		on(`change:${attr}_score`, (eventinfo) => {
 			const score = parseInt(eventinfo.newValue) || 0;
-
-			setAttributes({attr: score * 5}, true);
+			setAttributes({[`${attr}`]: score * 5}, true);
 		});
 	});
 
-	// === DERIVED ATTRIBUTES
-	/*arrays['hit_points'].forEach(attr => {
+	// === HIT POINTS
+	arrays['hit_points'].forEach(attr => {
 		on(`change:${attr}`, (eventinfo) => {
-			const attributes = arrays['hit_points'];
-			attributes.push('hit_points');
-			getAttrs(attributes, (value) => {
-				const strength = parseInt(value.strength) || 0, constitution = parseInt(value.constitution) || 0; 
+			const attributes = arrays['hit_points'].concat(['hit_points']);
+			getAttributes(attributes).then(values => {
+				const strength = parseInt(values.strength_score) || 0, constitution = parseInt(values.constitution_score) || 0; 
 				const calculated = Math.ceil((strength + constitution)/2);
 				let update = { hit_points_max: calculated }
-				if (value.hit_points === undefined) { update['hit_points'] = calculated; }
-				setAttributes(update, true);
+				if (values.hit_points === undefined || values.hit_points === "") { update['hit_points'] = calculated }
+			  	console.log(`%c HIT POINTS UPDATE`, 'color: green; font-weight:bold');
+			  	console.log(update);
+
+			  	return update
+			}).then(result => {
+				console.log(`%c HIT POINTS RESULT`, 'color: green; font-weight:bold');
+			  	console.log(result);
+			  	setAttributes(result, true);
 			});
 		});
-	})
-
-*/
+	});
 
 	// === TOGGLE SETTINGS
 		arrays['sheets'].forEach(attr => {
@@ -1030,7 +1044,7 @@
 	// === TOGGLE INPUT SETTINGS
 	    arrays['toggles'].forEach(attr => {
 	        on(`clicked:toggle_${attr}`, () => {
-	        	getAttrs(['toggles'], (value) => {
+	        	getAttrs(['toggles'], (values) => {
 	 				let string = toggleBuilder(attr, v['toggles']);
 	                setAttributes({toggles: string}, true);
 	        	});
@@ -1045,14 +1059,14 @@
 
 	// === GM WHISPER TOGGLES
 		on('clicked:whisper', (eventinfo) => {
-			getAttrs(['gm_toggle'], (value) => {
-				setAttributes({gm_toggle: (v.gm_toggle.includes('gm')) ?  ' ' : '/w gm'}, true);
+			getAttrs(['gm_toggle'], (values) => {
+				setAttributes({gm_toggle: (values.gm_toggle.includes('gm')) ?  ' ' : '/w gm'}, true);
 			});
 		});
 
 	// === SHEET VERSIONING
 		on('sheet:opened', () => {
-			getAttrs(['version'], (value) => { versioning(parseFloat(v.version) || 1); });
+			getAttrs(['version'], (values) => { versioning(parseFloat(values.version) || 1); });
 		});			
 
 		const versioning = (version) => {
