stat sheet workers done

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -1,11 +1,5 @@
 
-<!--VERSION-->
-<!-- =============================-->
 <input name="attr_version" type="hidden" value="1"/>
-<!--MIXINS-->
-<!--MULTIPLE STYLED CHECKBOXES-->
-<!--SKILL ROWS-->
-<!--TRANSLATIONS-->
 <!-- TABS-->
 <!-- =============================-->
 <input class="type" name="attr_sheet_type" type="hidden" value="pc"/>
@@ -18,10 +12,8 @@
   <button data-i18n-title="gm whisper toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span><span class="hidden" data-i18n="current status:">current status:<span class="on" data-i18n="on">on</span><span class="off" data-i18n="off">off</span></span></button>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
-  <button data-i18n-title="sheet settings" name="act_settings" title="sheet settings" type="action"> <span class="hidden" data-i18n="sheet settings toggle">sheet settings toggle</span><span class="pictos">y </span></button>
+  <button data-i18n-title="sheet settings" name="act_toggle_settings" title="sheet settings" type="action"> <span class="hidden" data-i18n="sheet settings toggle">sheet settings toggle</span><span class="pictos">y </span></button>
 </div>
-<!-- OBJECTS-->
-<!-- =============================-->
 <!-- NPC SHEET-->
 <!-- =============================-->
 <div class="npc">
@@ -32,7 +24,7 @@
     <p>MORE NPC STUFF </p>
   </div>
 </div>
-<!--PC SHEET-->
+<!-- PC SHEET-->
 <!-- =============================-->
 <div class="pc">
   <!--PERSONAL DATA-->
@@ -201,8 +193,9 @@
           <div class="vert-line"></div><span class="center" name="attr_hit_points_max" title="@{hit_points_max}"></span>
           <div class="vert-line"></div>
           <label data-i18n-title="hit points" title="hit points">
-            <input name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number"/>
+            <input name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value="10"/>
           </label>
+          <input name="attr_hit_points_max" type="hidden" value="10"/>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
@@ -211,8 +204,9 @@
           <div class="vert-line"></div><span class="center" name="attr_willpower_points_max" title="@{willpower_points_max}"></span>
           <div class="vert-line"></div>
           <label data-i18n-title="willpower points" title="willpower points">
-            <input name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number"/>
+            <input name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value="10"/>
           </label>
+          <input name="attr_willpower_points_max" type="hidden" value="10"/>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
@@ -221,18 +215,20 @@
           <div class="vert-line"></div><span class="center" name="attr_sanity_points_max" title="@{sanity_points_max}"></span>
           <div class="vert-line"></div>
           <label data-i18n-title="sanity points" title="sanity points">
-            <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number"/>
+            <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number" value="50"/>
           </label>
+          <input name="attr_sanity_points_max" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
-            <h3 class="aligned-left" data-i18n="breaking points" data-i18n-title="breaking points">breaking points</h3><span>(BP)</span>
+            <h3 class="aligned-left" data-i18n="breaking point" data-i18n-title="breaking point">breaking point</h3><span>(BP)</span>
           </div>
-          <div class="vert-line"></div><span class="center" name="attr_breaking_points_max" title="@{breaking_points_max}"></span>
+          <div class="vert-line"></div><span class="center" name="attr_breaking_point_max" title="@{breaking_point_max}"></span>
           <div class="vert-line"></div>
-          <label data-i18n-title="breaking points" title="breaking points">
-            <input name="attr_breaking_points" placeholder="10" title="@{breaking_points}" type="number"/>
+          <label data-i18n-title="breaking point" title="breaking point">
+            <input name="attr_breaking_point" placeholder="10" title="@{breaking_point}" type="number" value="40"/>
           </label>
+          <input name="attr_breaking_point_max" type="hidden" value="40"/>
         </div>
       </div>
       <!--PHYSICAL DESCRIPTION-->
@@ -955,17 +951,15 @@
   <!--BOTTOM DECORATION-->
   <div class="grid section-bottom-decor"><span class="uppercase" data-i18n="DD">DD</span><span class="uppercase" data-i18n="united states form">united states form</span><span data-i18n="315">315</span><span class="uppercase" data-i18n="top secret//orcon//special access required delta green agent documenation sheet">top secret//orcon//special access required delta green agent documenation sheet <span name="attr_version"></span></span><span data-i18n="112382">112382</span></div>
 </div>
-<!--SETTINGS SHEET-->
+<!-- SETTINGS SHEET-->
 <!-- =============================-->
 <div class="settings">
   <select name="attr_sheet_select" title="character sheet select" selected="selected">
-    <option data-i18n="pc" value="character">character</option>
+    <option data-i18n="pc" value="pc">character</option>
     <option data-i18n="npc" value="npc">npc</option>
   </select>
 </div>
-<!--HIDDEN ATTRIBUTES-->
-<!-- =============================-->
-<!--ROLL TEMPLATE-->
+<!-- ROLL TEMPLATE-->
 <!-- =============================-->
 <!--include src/pug/rolltemplate.pug-->
 <!--SHEETWORKERS-->
@@ -975,29 +969,14 @@
 			stats: ['strength', 'constitution', 'dexterity', 'intelligence', 'power', 'charisma'],
 			hit_points: ['strength_score', 'constitution_score'],
 			sanity_points: ['power_score'],
-			breaking_point: ['sanity_score', 'power_score'],
+			breaking_point: ['sanity_points', 'power_score'],
 			willpower_points: ['power_score'],
-			repeating_settings: [''],
-			sheets: ['settings'],
-			toggles: ['sheet']
+			toggles: ['settings']
 		};
 
 	// === SHARED FUNCTIONS
 	const setAttributes = (update, silent) => { 
 		(silent === true) ? setAttrs(update, {silent:true}) : setAttrs(update); 
-	};
-
-	// === GET ATTRIBUTES
-	const getAttributes = (array) => {
-		return new Promise((resolve, reject)  => {
-			try {
-				getAttrs(array, (values) => {
-					resolve(values);
-				});
-			} catch (error) {
-				reject(`ERROR: ${error}`);
-			}
-		});
 	};
 
 	// === STAT SCORES
@@ -1012,71 +991,86 @@
 	arrays['hit_points'].forEach(attr => {
 		on(`change:${attr}`, (eventinfo) => {
 			const attributes = arrays['hit_points'].concat(['hit_points']);
-			getAttributes(attributes).then(values => {
+			getAttrs(attributes, (values) => {
 				const strength = parseInt(values.strength_score) || 0, constitution = parseInt(values.constitution_score) || 0; 
 				const calculated = Math.ceil((strength + constitution)/2);
-				let update = { hit_points_max: calculated }
-				if (values.hit_points === undefined || values.hit_points === "") { update['hit_points'] = calculated }
-			  	console.log(`%c HIT POINTS UPDATE`, 'color: green; font-weight:bold');
-			  	console.log(update);
-
-			  	return update
-			}).then(result => {
-				console.log(`%c HIT POINTS RESULT`, 'color: green; font-weight:bold');
-			  	console.log(result);
-			  	setAttributes(result, true);
+				let update = { 
+					hit_points: calculated,
+					hit_points_max: calculated 
+				}
+				setAttributes(update, true);
 			});
 		});
 	});
 
-	// === TOGGLE SETTINGS
-		arrays['sheets'].forEach(attr => {
-	        on(`clicked:${attr}`, (eventinfo) => {
-	            setAttributes({sheet_type: `${attr}`}, true);
-	        });
-	    });
-
-	// === SWITCH BETWEEN SHEETS
-	    on(`change:sheet_select`, (eventinfo) => {
-	        setAttributes({sheet_type: eventinfo.newValue}, true);
-	    });
-
-	// === TOGGLE INPUT SETTINGS
-	    arrays['toggles'].forEach(attr => {
-	        on(`clicked:toggle_${attr}`, () => {
-	        	getAttrs(['toggles'], (values) => {
-	 				let string = toggleBuilder(attr, v['toggles']);
-	                setAttributes({toggles: string}, true);
-	        	});
-	        });
-	    });
-
-	// === UPDATE TOGGLE STRING
-		const toggleBuilder = (attr, oldString) => {
-	        let newString = (oldString.includes(`${attr}`)) ? oldString.replace(`${attr},`, '') : `${oldString}${attr},`;
-	        return newString
-		};
-
-	// === GM WHISPER TOGGLES
-		on('clicked:whisper', (eventinfo) => {
-			getAttrs(['gm_toggle'], (values) => {
-				setAttributes({gm_toggle: (values.gm_toggle.includes('gm')) ?  ' ' : '/w gm'}, true);
+	// === WILLPOWER POINTS
+	arrays['willpower_points'].forEach(attr => {
+		on(`change:${attr}`, (eventinfo) => {
+			const attributes = arrays['willpower_points'].concat(['willpower_points']);
+			getAttrs(attributes, (values) => {
+				const calculated = parseInt(values.power_score) || 0; 
+				let update = { 
+					willpower_point: calculated,
+					willpower_points_max: calculated 
+				}
+				setAttributes(update, true);
 			});
 		});
+	});
+
+	// === SANITY POINTS & BREAKING POINT
+	arrays['sanity_points'].forEach(attr => {
+		on(`change:${attr}`, (eventinfo) => {
+			const attributes = arrays['sanity_points'].concat(['sanity_points', 'breaking_point']);
+			getAttrs(attributes, (values) => {
+				const sanity = parseInt(values.power_score) || 0, calculatedSanity = sanity*5, calculatedBreakingPoint = calculatedSanity - sanity; 
+				let update = { 
+					sanity_points: calculatedSanity,
+					sanity_points_max: calculatedSanity,
+					breaking_point: calculatedBreakingPoint,
+					breaking_point_max: calculatedBreakingPoint
+				}
+				setAttributes(update, true);
+			});
+		});
+	});
+
+	// === TOGGLE INPUT SETTINGS
+    arrays['toggles'].forEach(attr => {
+        on(`clicked:toggle_${attr}`, () => {
+        	getAttrs(['toggles'], (values) => {
+ 				let string = toggleBuilder(attr, v['toggles']);
+                setAttributes({toggles: string}, true);
+        	});
+        });
+    });
+
+	// === UPDATE TOGGLE STRING
+	const toggleBuilder = (attr, oldString) => {
+        let newString = (oldString.includes(`${attr}`)) ? oldString.replace(`${attr},`, '') : `${oldString}${attr},`;
+        return newString
+	};
+
+	// === GM WHISPER TOGGLES
+	on('clicked:whisper', (eventinfo) => {
+		getAttrs(['gm_toggle'], (values) => {
+			setAttributes({gm_toggle: (values.gm_toggle.includes('gm')) ?  ' ' : '/w gm'}, true);
+		});
+	});
 
 	// === SHEET VERSIONING
-		on('sheet:opened', () => {
-			getAttrs(['version'], (values) => { versioning(parseFloat(values.version) || 1); });
-		});			
+	on('sheet:opened', () => {
+		getAttrs(['version'], (values) => { versioning(parseFloat(values.version) || 1); });
+	});			
 
-		const versioning = (version) => {
-		   console.log(`%c Versioning, ${version}`, 'color: green; font-weight:bold');
-		   if (version >= 1) {
-				console.log(`%c Version is update to date`, 'color: orange; font-weight:bold');
-		    } else {
-				setAttrs({version: 1}, () => {versioning(1)});
-			};
+	const versioning = (version) => {
+	   console.log(`%c Versioning, ${version}`, 'color: green; font-weight:bold');
+	   if (version >= 1) {
+			console.log(`%c Version is update to date`, 'color: orange; font-weight:bold');
+	    } else {
+			setAttrs({version: 1}, () => {versioning(1)});
 		};
+	};
 
 
 
