--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -795,8 +795,10 @@
               <label class="styled-checkbox" data-i18n-title="skill fail checkbox" title="skill fail checkbox">
                 <input name="attr_fail" title="@{repeating_skills_${x}_fail}" type="checkbox"/>
               </label>
-              <input data-i18n-placeholder="skill name" name="attr_name" placeholder="skill name" title="@{repeating_skills_${x}_name}" type="text" value=""/>
-              <button data-i18n-title="skill roll" name="skill roll" title="skill roll" type="roll" value=""></button>
+              <label data-i18n-title="skill name" title="skill name">
+                <input class="center" data-i18n-placeholder="skill name" name="attr_name" placeholder="skill name" title="@{repeating_skills_${x}_name}" type="text" value=""/>
+              </label>
+              <button class="dicefontd10" data-i18n-title="skill roll" name="skill roll" title="skill roll" type="roll" value="">k</button>
               <div class="vert-line"></div>
               <label data-i18n-title="skill rank" title="skill rank">
                 <input data-i18n-placeholder="0" name="attr_rank" title="@{repeating_skills_${x}_rank}" placeholder="0" type="number" value=""/>
@@ -837,21 +839,21 @@
       </div>
       <div class="section-directions center border-bottom"><span data-i18n="Body armor reduces the damage of all attacks except Called Shots and successful Lethality rolls.">Body armor reduces the damage of all attacks except Called Shots and successful Lethality rolls.</span></div>
       <div class="grid section-weapons border-bottom">
-        <h2 class="center" data-i18n="16. weapons" data-i18n-title="16. weapons" title="16. weapons">16. weapons</h2>
+        <h2 data-i18n="16. weapons" data-i18n-title="16. weapons" title="16. weapons">16. weapons</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="skill %" data-i18n-title="skill %" title="skill %">skill %</h2>
+        <h2 data-i18n="skill %" data-i18n-title="skill %" title="skill %">skill %</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="base range" data-i18n-title="base range" title="base range">base range</h2>
+        <h2 data-i18n="base range" data-i18n-title="base range" title="base range">base range</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="damage" data-i18n-title="damage" title="damage">damage</h2>
+        <h2 data-i18n="damage" data-i18n-title="damage" title="damage">damage</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="armor piercing" data-i18n-title="armor piercing" title="armor piercing">armor piercing</h2>
+        <h2 data-i18n="armor piercing" data-i18n-title="armor piercing" title="armor piercing">armor piercing</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="lethality %" data-i18n-title="lethality %" title="lethality %">lethality %</h2>
+        <h2 data-i18n="lethality %" data-i18n-title="lethality %" title="lethality %">lethality %</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="kill radius" data-i18n-title="kill radius" title="kill radius">kill radius</h2>
+        <h2 data-i18n="kill radius" data-i18n-title="kill radius" title="kill radius">kill radius</h2>
         <div class="vert-line"></div>
-        <h2 class="center" data-i18n="ammo" data-i18n-title="ammo" title="ammo">ammo</h2>
+        <h2 data-i18n="ammo" data-i18n-title="ammo" title="ammo">ammo</h2>
         <div class="vert-line"></div>
       </div>
       <div class="repeating-container border-bottom">
@@ -889,6 +891,8 @@
               <input data-i18n-placeholder="ammo" name="attr_ammo" placeholder="ammo" title="@{repeating_weapons_${x}_ammo}" type="number" value=""/>
             </label>
             <div class="vert-line"></div>
+            <button class="dicefontd10" name="weapon" type="roll" title="weapon roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}">k</button>
+            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{damage=[[@{damage}]]}}"></button>
           </div>
         </fieldset>
       </div>
@@ -917,7 +921,7 @@
         </div>
         <div class="repeating-container border-bottom">
           <fieldset class="repeating_special">
-            <div class="grid section-19">
+            <div class="grid section-19 border-bottom">
               <label data-i18n-title="special training input" title="special training input">
                 <input name="attr_special_training" placeholder="special training" title="@{repeating_weapons_${x}_special_training}" type="text" value=""/>
               </label>
@@ -963,17 +967,17 @@
 <!-- =============================-->
 <div class="rolltemplates">
   <rolltemplate class="sheet-rolltemplate-rolls">
-    <div class="sheet-template-container">
-      <!-- - Display a header on the template --->
+    <div class="sheet-template-container">{{#header}}
       <div class="sheet-template-header">
-        <h1>{{#header}}{{header}}{{/header}}</h1>
-        <h2>{{#subheader}}({{subheader}}%){{/subheader}}</h2>
-      </div>
-      <!-- - Display the dice roll in the template --->
-      <div class="sheet-template-body">
-        <div class="sheet-template-row"><span class="inlinerollresult">{{#rollTotal() dice 10}}{{/rollTotal() dice 10}}{{#rollLess() dice 10}}{{dice}}{{/rollLess() dice 10}}</span><span class="inlinerollresult">{{#rollTotal() dice2 10}}0{{/rollTotal() dice2 10}}{{#rollLess() dice2 10}}{{dice2}}{{/rollLess() dice2 10}}</span><span class="percent">%</span></div>
-        <!-- - Display a description. This is great for text included with a roll --->{{#desc}}
-        <div class="sheet-template-row"><span class="sheet-template-desc"></span></div>{{/desc}}
+        <h1>{{header}}</h1>{{#subheader}}
+        <h2>({{subheader}}%)</h2>{{/subheader}}
+      </div>{{/header}}
+      <div class="sheet-template-body">{{#dice}}
+        <div class="sheet-template-row"><span class="inlinerollresult">{{#rollTotal() dice 10}}{{/rollTotal() dice 10}}{{#rollLess() dice 10}}{{dice}}{{/rollLess() dice 10}}</span><span class="inlinerollresult">{{#rollTotal() dice2 10}}0{{/rollTotal() dice2 10}}{{#rollLess() dice2 10}}{{dice2}}{{/rollLess() dice2 10}}</span><span class="percent">%</span></div>{{/dice}}
+        {{#damage}}
+        <div class="sheet-template-row"> <span class="inlinerollresult">{{damage}}</span></div>{{/damage}}
+        {{#desc}}
+        <div class="sheet-template-row"><span class="sheet-template-desc">{{desc}}</span></div>{{/desc}}
       </div>
     </div>
   </rolltemplate>
