Fixed issue with initiative rolls

--- a/Cyberpunk Red/CyberpunkRed.html
+++ b/Cyberpunk Red/CyberpunkRed.html
@@ -4,7 +4,7 @@
     <h1><em>Cyberpunk Red</em></h1>
     <span>Character Sheet</span>
     <div>&nbsp;</div>
-    <label>Roll initiative: <button type="roll" name="roll_initiative" value="&{template:cprskill} {{name=@{character_name}}} {{rollname=initiative}} {{theroll=[[1d10+@{ref}]]}} &{tracker}" class="skillroll"></label>
+    <label>Roll initiative: <button type="roll" name="roll_initiative" value="&{template:initiative} {{name=@{character_name}}} {{rollname=initiative}} {{theroll=[[1d10+@{ref} &{tracker}]]}}" class="skillroll"></label>
   </div>
   <div class="common section">
     <label>Character name:</label><input name="attr_character_name" type="text" />
@@ -160,7 +160,7 @@
   </table>
 </rolltemplate>
 <script type="text/worker">
-  var currentVersion = 6;
+  var currentVersion = 7;
   on('sheet:opened', function() {
     getAttrs(["version"], function(values) {
       v = values.version;
