--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -12,7 +12,19 @@
   <button data-i18n-title="gm whisper toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span><span class="hidden" data-i18n="current status:">current status:<span class="on" data-i18n="on">on</span><span class="off" data-i18n="off">off</span></span></button>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
-  <button data-i18n-title="sheet settings" name="act_toggle_settings" title="sheet settings" type="action"> <span class="hidden" data-i18n="sheet settings toggle">sheet settings toggle</span><span class="pictos">y </span></button>
+  <select name="sheet_type">
+    <option selected="selected"></option>
+    <optgroup label="Sheet Type">
+      <option data-i18n="pc" value="pc">pc</option>
+      <option data-i18n="npc" value="npc">npc</option>
+    </optgroup>
+  </select>
+  <!--button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
+  //	span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
+  //	span.pictos() U
+  
+  
+  -->
 </div>
 <!-- NPC SHEET-->
 <!-- =============================-->
