--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -12,19 +12,13 @@
   <button data-i18n-title="gm whisper toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span><span class="hidden" data-i18n="current status:">current status:<span class="on" data-i18n="on">on</span><span class="off" data-i18n="off">off</span></span></button>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
-  <select name="sheet_type">
-    <option selected="selected"></option>
+  <select name="attr_sheet_type">
     <optgroup label="Sheet Type">
       <option data-i18n="pc" value="pc">pc</option>
       <option data-i18n="npc" value="npc">npc</option>
     </optgroup>
   </select>
-  <!--button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
-  //	span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
-  //	span.pictos() U
-  
-  
-  -->
+
 </div>
 <!-- NPC SHEET-->
 <!-- =============================-->
@@ -967,14 +961,7 @@
   <!--BOTTOM DECORATION-->
   <div class="grid section-bottom-decor"><span class="uppercase" data-i18n="DD">DD</span><span class="uppercase" data-i18n="united states form">united states form</span><span data-i18n="315">315</span><span class="uppercase" data-i18n="top secret//orcon//special access required delta green agent documenation sheet">top secret//orcon//special access required delta green agent documenation sheet <span name="attr_version"></span></span><span data-i18n="112382">112382</span></div>
 </div>
-<!-- SETTINGS SHEET-->
-<!-- =============================-->
-<div class="settings">
-  <select name="attr_sheet_select" title="character sheet select" selected="selected">
-    <option data-i18n="pc" value="pc">character</option>
-    <option data-i18n="npc" value="npc">npc</option>
-  </select>
-</div>
+
 <!-- ROLL TEMPLATE-->
 <!-- =============================-->
 <div class="rolltemplates">
