npc in progress

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -18,16 +18,84 @@
       <option data-i18n="npc" value="npc">npc</option>
     </optgroup>
   </select>
-
 </div>
 <!-- NPC SHEET-->
 <!-- =============================-->
 <div class="npc">
-  <div class="box npc-flex">
-    <p>NPC STUFF</p>
-  </div>
-  <div class="box npc-flex">
-    <p>MORE NPC STUFF </p>
+  <div class="grid">
+    <div class="section-header">
+      <label data-i18n-title="enter a name for non-player character" title="enter a name for non-player character">
+        <input data-i18n-placeholder="character name" name="attr_name" placeholder="Character name" title="@{name}" type="text" value=""/>
+      </label>
+    </div>
+    <div class="section-body">
+      <div class="section">
+        <button name="strength" data-i18n-title="strength roll" title="strength roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{STR}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="STR">STR</h1>
+        </button>
+        <label data-i18n-title="strength" title="strength">
+          <input data-i18n-placeholder="10" min="0" name="attr_strength" placeholder="10" title="@{strength}" type="number" value="10"/>
+        </label>
+        <button name="constitution" data-i18n-title="constitution roll" title="constitution roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CON}}} {{subheader=@{constitution}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="CON">CON</h1>
+        </button>
+        <label data-i18n-title="constitution" title="constitution">
+          <input data-i18n-placeholder="10" min="0" name="attr_constitution" placeholder="10" title="@{constitution}" type="number" value="10"/>
+        </label>
+        <button name="dexterity" data-i18n-title="dexterity roll" title="dexterity roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{DEX}}} {{subheader=@{dexterity}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="DEX">DEX</h1>
+        </button>
+        <label data-i18n-title="dexterity" title="dexterity">
+          <input data-i18n-placeholder="10" min="0" name="attr_dexterity" placeholder="10" title="@{dexterity}" type="number" value="10"/>
+        </label>
+        <button name="intelligence" data-i18n-title="intelligence roll" title="intelligence roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{INT}}} {{subheader=@{intelligence}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="INT">INT</h1>
+        </button>
+        <label data-i18n-title="intelligence" title="intelligence">
+          <input data-i18n-placeholder="10" min="0" name="attr_intelligence" placeholder="10" title="@{intelligence}" type="number" value="10"/>
+        </label>
+        <button name="power" data-i18n-title="power roll" title="power roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{POW}}} {{subheader=@{power}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="POW">POW</h1>
+        </button>
+        <label data-i18n-title="power" title="power">
+          <input data-i18n-placeholder="10" min="0" name="attr_power" placeholder="10" title="@{power}" type="number" value="10"/>
+        </label>
+        <button name="charisma" data-i18n-title="charisma roll" title="charisma roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CHA}}} {{subheader=@{charisma}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+          <h1 data-i18n="CHA">CHA</h1>
+        </button>
+        <label data-i18n-title="charisma" title="charisma">
+          <input data-i18n-placeholder="10" min="0" name="attr_charisma" placeholder="10" title="@{charisma}" type="number" value="10"/>
+        </label>
+      </div>
+      <div class="section">
+        <h1 data-i18n="HP">HP</h1>
+        <label data-i18n-title="enter hit points" title="enter hit points">
+          <input data-i18n-placeholder="10" name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value=""/>
+        </label>
+        <h1 data-i18n="WP">WP</h1>
+        <label data-i18n-title="enter willpower points" title="enter willpower points">
+          <input data-i18n-placeholder="10" name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value=""/>
+        </label>
+      </div>
+      <div class="section">
+        <h1 data-i18n="armor">ARMOR
+          <label data-i18n-title="enter armor text" title="enter armor text">
+            <input data-i18n-placeholder="8 points of thick hide" name="attr_armor" placeholder="8 points of thick hide" title="@{armor}" type="text" value=""/>
+          </label>
+        </h1>
+      </div>
+      <div class="section">
+        <h1 data-i18n="skills">skills</h1>
+      </div>
+      <div class="section">
+        <h1 data-i18n="attacks">attacks</h1>
+      </div>
+      <div class="section">
+        <h1 data-i18n="other notes">other notes
+          <textarea name="attr_other_notes"></textarea>
+        </h1>
+      </div>
+    </div>
   </div>
 </div>
 <!-- PC SHEET-->
@@ -99,7 +167,7 @@
         <h2 class="aligned-left" data-i18n="distinguishing features" data-i18n-title="">distinguishing features</h2>
         <div class="horz-line"></div>
         <button name="strength" data-i18n-title="strength roll" title="strength roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{strength}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="strength">strength</h3><span data-i18n="STR">(STR)</span>
+          <h3 class="aligned-left" data-i18n="strength">strength</h3><span class="para" data-i18n="STR">(STR)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="strength score" title="strength score">
@@ -113,7 +181,7 @@
         <input name="attr_strength" type="hidden" value="50"/>
         <div class="horz-line"></div>
         <button name="constitution" data-i18n-title="constitution roll" title="constitution roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{constitution}}} {{subheader=@{constitution}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="constitution">constitution</h3><span data-i18n="CON">(CON)</span>
+          <h3 class="aligned-left" data-i18n="constitution">constitution</h3><span class="para" data-i18n="CON">(CON)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="constitution score" title="constitution score">
@@ -127,7 +195,7 @@
         <input name="attr_constitution" type="hidden" value="50"/>
         <div class="horz-line"></div>
         <button name="dexterity" data-i18n-title="dexterity roll" title="dexterity roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{dexterity}}} {{subheader=@{dexterity}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="dexterity">dexterity</h3><span data-i18n="DEX">(DEX)</span>
+          <h3 class="aligned-left" data-i18n="dexterity">dexterity</h3><span class="para" data-i18n="DEX">(DEX)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="dexterity score" title="dexterity score">
@@ -141,7 +209,7 @@
         <input name="attr_dexterity" type="hidden" value="50"/>
         <div class="horz-line"></div>
         <button name="intelligence" data-i18n-title="intelligence roll" title="intelligence roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{intelligence}}} {{subheader=@{intelligence}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="intelligence">intelligence</h3><span data-i18n="INT">(INT)</span>
+          <h3 class="aligned-left" data-i18n="intelligence">intelligence</h3><span class="para" data-i18n="INT">(INT)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="intelligence score" title="intelligence score">
@@ -155,7 +223,7 @@
         <input name="attr_intelligence" type="hidden" value="50"/>
         <div class="horz-line"></div>
         <button name="power" data-i18n-title="power roll" title="power roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{power}}} {{subheader=@{power}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="power">power</h3><span data-i18n="POW">(POW)</span>
+          <h3 class="aligned-left" data-i18n="power">power</h3><span class="para" data-i18n="POW">(POW)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="power score" title="power score">
@@ -169,7 +237,7 @@
         <input name="attr_power" type="hidden" value="50"/>
         <div class="horz-line"></div>
         <button name="charisma" data-i18n-title="charisma roll" title="charisma roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{charisma}}} {{subheader=@{charisma}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h3 class="aligned-left" data-i18n="charisma">charisma</h3><span data-i18n="CHA">(CHA)</span>
+          <h3 class="aligned-left" data-i18n="charisma">charisma</h3><span class="para" data-i18n="CHA">(CHA)</span>
         </button>
         <div class="vert-line"></div>
         <label data-i18n-title="charisma score" title="charisma score">
@@ -194,7 +262,7 @@
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
-            <h3 class="aligned-left" data-i18n="hit points" data-i18n-title="hit points">hit points</h3><span>(HP)</span>
+            <h3 class="aligned-left" data-i18n="hit points" data-i18n-title="hit points">hit points</h3><span class="para" data-i18n="HP">(HP)</span>
           </div>
           <div class="vert-line"></div><span class="center" name="attr_hit_points_max" title="@{hit_points_max}"></span>
           <div class="vert-line"></div>
@@ -205,7 +273,7 @@
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
-            <h3 class="aligned-left" data-i18n="willpower points" data-i18n-title="willpower points">willpower points</h3><span>(WP)</span>
+            <h3 class="aligned-left" data-i18n="willpower points" data-i18n-title="willpower points">willpower points</h3><span class="para" data-i18n="WP">(WP)</span>
           </div>
           <div class="vert-line"></div><span class="center" name="attr_willpower_points_max" title="@{willpower_points_max}"></span>
           <div class="vert-line"></div>
@@ -216,9 +284,12 @@
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
-            <h3 class="aligned-left" data-i18n="sanity points" data-i18n-title="sanity points">sanity points</h3><span>(SAN)</span>
+            <h3 class="aligned-left" data-i18n="sanity points" data-i18n-title="sanity points">sanity points</h3><span class="para" data-i18n="SAN">(SAN)</span>
           </div>
-          <div class="vert-line"></div><span class="center" name="attr_sanity_points_max" title="@{sanity_points_max}"></span>
+          <div class="vert-line"></div>
+          <label data-i18n-title="sanity points maximum" title="sanity points maximum">
+            <input class="max" name="attr_sanity_points_max" placeholder="50" title="@{sanity_points_max}" type="number" value="50"/>
+          </label>
           <div class="vert-line"></div>
           <label data-i18n-title="sanity points" title="sanity points">
             <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number" value="50"/>
@@ -227,7 +298,7 @@
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
-            <h3 class="aligned-left" data-i18n="breaking point" data-i18n-title="breaking point">breaking point</h3><span>(BP)</span>
+            <h3 class="aligned-left" data-i18n="breaking point" data-i18n-title="breaking point">breaking point</h3><span class="para" data-i18n="BP">(BP)</span>
           </div>
           <div class="vert-line"></div><span class="center" name="attr_breaking_point_max" title="@{breaking_point_max}"></span>
           <div class="vert-line"></div>
@@ -554,7 +625,7 @@
         <label class="styled-checkbox" data-i18n-title="HUMINT fail checkbox" title="HUMINT fail checkbox">
           <input name="attr_humint_fail" title="@{humint_fail}" type="checkbox"/>
         </label>
-        <button data-i18n-title="HUMINT roll" name="humint" title="HUMINT roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=^{humint}}} {{subheader=@{humint}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <button data-i18n-title="HUMINT roll" name="humint" title="HUMINT roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=^{HUMINT}}} {{subheader=@{humint}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
           <h3 data-i18n="HUMINT" title="HUMINT">HUMINT</h3><span data-i18n="(10%)">(10%)</span>
         </button>
         <div class="vert-line"></div>
@@ -719,7 +790,7 @@
         <label class="styled-checkbox" data-i18n-title="SIGINT fail checkbox" title="SIGINT fail checkbox">
           <input name="attr_sigint_fail" title="@{sigint_fail}" type="checkbox"/>
         </label>
-        <button data-i18n-title="SIGINT roll" name="sigint" title="SIGINT roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=^{sigint}}} {{subheader=@{sigint}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <button data-i18n-title="SIGINT roll" name="sigint" title="SIGINT roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=^{SIGINT}}} {{subheader=@{sigint}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
           <h3 data-i18n="SIGINT" title="SIGINT">SIGINT</h3><span data-i18n="(0%)">(0%)</span>
         </button>
         <div class="vert-line"></div>
@@ -898,7 +969,7 @@
             </label>
             <div class="vert-line"></div>
             <button class="dicefontd10" name="weapon" type="roll" title="weapon roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}">k</button>
-            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{damage=[[@{damage}]]}}"></button>
+            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=^{damage}}} {{damage=[[@{damage}]]}}"></button>
           </div>
         </fieldset>
       </div>
@@ -961,15 +1032,14 @@
   <!--BOTTOM DECORATION-->
   <div class="grid section-bottom-decor"><span class="uppercase" data-i18n="DD">DD</span><span class="uppercase" data-i18n="united states form">united states form</span><span data-i18n="315">315</span><span class="uppercase" data-i18n="top secret//orcon//special access required delta green agent documenation sheet">top secret//orcon//special access required delta green agent documenation sheet <span name="attr_version"></span></span><span data-i18n="112382">112382</span></div>
 </div>
-
 <!-- ROLL TEMPLATE-->
 <!-- =============================-->
 <div class="rolltemplates">
   <rolltemplate class="sheet-rolltemplate-rolls">
     <div class="sheet-template-container">{{#header}}
       <div class="sheet-template-header">
-        <h1>{{header}}</h1>{{#subheader}}
-        <h2>({{subheader}}%)</h2>{{/subheader}}
+        <h1>{{header}} </h1>
+        <h2>{{#subheader}}({{subheader}}%){{/subheader}}</h2>
       </div>{{/header}}
       <div class="sheet-template-body">{{#dice}}
         <div class="sheet-template-row"><span class="inlinerollresult">{{#rollTotal() dice 10}}{{/rollTotal() dice 10}}{{#rollLess() dice 10}}{{dice}}{{/rollLess() dice 10}}</span><span class="inlinerollresult">{{#rollTotal() dice2 10}}0{{/rollTotal() dice2 10}}{{#rollLess() dice2 10}}{{dice2}}{{/rollLess() dice2 10}}</span><span class="percent">%</span></div>{{/dice}}
@@ -987,8 +1057,7 @@
 		const arrays = {
 			stats: ['strength', 'constitution', 'dexterity', 'intelligence', 'power', 'charisma'],
 			hit_points: ['strength_score', 'constitution_score'],
-			sanity_points: ['power_score'],
-			breaking_point: ['sanity_points', 'power_score'],
+			sanity_points: ['power_score'], //ALSO USED FOR BREAKING POINTS
 			willpower_points: ['power_score'],
 			toggles: ['settings']
 		};
