--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -11528,6 +11528,7 @@
                 if(blob.Description) {
                     repupdate[rowid + ">label>p"] = blob.Description;
                 }
+
                 _.each(spells, function(spell) {
                     addRepeatingSection(rowid, "utilityrow", function(rowid) {
                         let repupdate = {};
@@ -15902,6 +15903,139 @@
         }
     });
 
+    //Fixing Bard's Magical Secret (UC-10)
+    //By Miguel
+    //The ways this was being handled before, binded to clicked:repeating_utilityrow_launch, was not being triggered due to the way the DOM is built.
+    on("clicked:repeating_utilityrow", function(eventinfo) {
+        if(eventinfo.sourceAttribute.indexOf('utilityrow_launch') === -1) return;
+        const mancerdata = getCharmancerData();
+        var querysettings = {};
+        var spelldata = getKnownLpSpells(mancerdata);
+        var leveldata = _.findWhere(getLevelingData(mancerdata), {classnumber: parseInt(mancerdata["lp-choices"].values[`${eventinfo.sourceSection}_parent`][5])});
+        var query = "";
+        let newspells = 0;
+        let newcantrips = 0;
+        var spellnames = [];
+        var current = [];
+        var locked = [];
+        var update = {};
+        update[`${eventinfo.sourceSection} .sheet-warning`] = "";
+        try {
+            querysettings = JSON.parse(mancerdata["lp-choices"].values[`${eventinfo.sourceSection}_info`]);
+        } catch(e) {
+            querysettings = mancerdata["lp-choices"].values[`${eventinfo.sourceSection}_info`];
+        };
+        if(mancerdata["lp-choices"].values[`${eventinfo.sourceSection}_result`]) current = mancerdata["lp-choices"].values[`${eventinfo.sourceSection}_result`].split(", ");
+        if(mancerdata["lp-spells"] && mancerdata["lp-spells"].repeating) {
+            _.each(mancerdata["lp-spells"].repeating, function(repid) {
+                if(mancerdata["lp-spells"].values[`${repid}_checked`]) {
+                    spelldata[mancerdata["lp-spells"].values[`${repid}_name`]] = {
+                        level: mancerdata["lp-spells"].values[`${repid}_level`],
+                        spellclass: mancerdata["lp-spells"].values[`${repid}_class`]
+                    }
+                }
+            });
+        }
+        _.each(current, function(currentspell) {
+            delete spelldata[currentspell];
+        })
+        if(querysettings.Known) {
+            if(querysettings.Level + "" === "0") {
+                newcantrips = 1;
+            } else {
+                newspells = 1;
+            }
+            _.each(spelldata, function(spell, spellname) {
+                if(!querysettings.Level || (querysettings.Level && querysettings.Level == spell.level)) spellnames.push(spellname);
+            });
+            if(spellnames.length > 0) {
+                query = "Category:Spells Name:" + spellnames.join("|");
+            } else {
+                update[`${eventinfo.sourceSection} .sheet-warning`] = `You do not currently know any level ${querysettings.Level} spells.`;
+                setCharmancerText(update);
+            }
+        } else {
+            query = "Category:Spells";
+            if(querysettings.Level) {
+                let levels = [querysettings.Level];
+                if(querysettings.Level == "max") {
+                    levels = [];
+                    for(let x=1; x<=leveldata.maxspell; x++) {
+                        levels.push(x);
+                    }
+                }
+                query += " Level:" + levels.join("|");
+            };
+            if(querysettings.List && querysettings.List.toLowerCase() !== "any") {
+                query += " Classes:*" + querysettings.List;
+            };
+            if(querysettings.Level + "" === "0") {
+                newcantrips = querysettings.Number ? parseInt(querysettings.Number) : 1;
+            } else {
+                newspells = querysettings.Number ? parseInt(querysettings.Number) : 1;
+            }
+            locked = _.keys(spelldata);
+        }
+        if(query) {
+            setCharmancerText(update);
+            changeCharmancerPage("lp-spellchoice", function() {
+                getCompendiumQuery([query], function(data) {
+                    let byLevel = {};
+                    let filters = {};
+                    let filtered = [];
+                    let toSet = {};
+                    let update = {};
+                    update["instructions"] = querysettings.HelpText;
+                    console.log(data);
+                    _.each(querysettings, function(setting, key) {
+                        if(!["Level","List","Number","Type","ButtonText","HelpText", "Known", "Class"].includes(key)) {
+                            filters[key] = setting;
+                        }
+                    });
+                    console.log(filters);
+                    if(querysettings.Known) {
+                        delete querysettings.Level;
+                    }
+                    delete querysettings.Known;
+                    _.each(data, function(spell) {
+                        let match = true;
+                        _.each(filters, function(value, name) {
+                            if(spell.data[name] !== value) match = false;
+                        })
+                        if(match) filtered.push(spell);
+                    });
+                    console.log(filtered);
+                    _.each(filtered, function(spell) {
+                        if(spell.data.Classes) {
+                            byLevel[spell.data.Level] = byLevel[spell.data.Level] || [];
+                            byLevel[spell.data.Level].push({
+                                name: spell.name,
+                                classes: spell.data.Classes.split(",").map(x => x.trim()),
+                                level: parseInt(spell.data.Level)
+                            });
+                        }
+                    });
+                    toSet.newspells = newspells;
+                    toSet.newcantrips = newcantrips;
+                    toSet.valid = "now";
+                    toSet.source = eventinfo.sourceSection;
+                    setCharmancerText(update);
+                    setAttrs(toSet, function() {
+                        addSpellSections(byLevel, {
+                            newcantrips: newcantrips,
+                            newspells: newspells,
+                            page: "lp-spellchoice",
+                            selected: current,
+                            locked: locked
+                        });
+                    });
+                });
+            });/**/
+        }
+    });
+
+    //TODO: Investigate if the duplicated event below listener can be removed
+    //By Miguel
     on("clicked:repeating_utilityrow_launch", function(eventinfo) {
         const mancerdata = getCharmancerData();
         var querysettings = {};
